For new installs, new features in older versions are not shown on the System Information page.
Fixed the modification of Webalizer and Logrotate config files when a domain's Apache logs are outside it's home directory.
Apache logs outside a domain's home directory are now included in backups and restores.
Added the --delete-existing flag to migrate-domain.pl, to remove any existing virtual server with the same name before re-migrating.
Plesk sub-domains are now included with migrating, including any users for managing their content.
The background collectinfo.pl cron job can be run less frequently or disabled using a new Module Config page option.
Added a script to change the Virtualmin license in all needed files on an already installed system.
Added the Magento eCommerce package to Virtualmin's script installers, version 1.0.
Added the --name-only flag to all list-* command-line API programs, to output just object names for easier use in scripts.
Leftover /tmp/clamav-* files older than 1 day are now periodically deleted by Virtualmin.
The pre-change script now has access to the settings that will be applied in $VIRTUALSERVER_NEWSERVER_* variables, while the $VIRTUALSERVER_* variables always contain the domain's settings before the change is made.
Users in domains with spam filtering enabled can have their auto-whitelists viewed and edited, using a new link on the Edit Mailbox page (which using Webmin 1.411 or later).
---- Changes since 3.55 ----
Added the list-mailbox.pl command-line script, for dumping a user's mail.
Added a script insaller for poMMo, a new web-based mailing list manager.
Link from the Edit Database page to scripts that use the DB.
When a script does not get fully installed (perhaps due to Virtualmin not being able to call its setup wizard), it is marked as a partial failure rather than a complete failure. This allows it be easily removed without leaving files behind.