@@ -883,3 +883,4 @@ Added the list-mailbox.pl command-line script, for dumping a user's mail.
 Added a script insaller for poMMo, a new web-based mailing list manager.
 Link from the Edit Database page to scripts that use the DB.
 When a script does not get fully installed (perhaps due to Virtualmin not being able to call its setup wizard), it is marked as a partial failure rather than a complete failure. This allows it be easily removed without leaving files behind.
+Wordpress, WPMU and bbPress are now downloaded from the Virtualmin website in preference to their developer's sites, as there is no way to fetch specific older versions from the original site.
